[gd_scene load_steps=10 format=3 uid="uid://863yrwy3aryy"]

[ext_resource type="PackedScene" uid="uid://dlacothulwj6i" path="res://Game/Enemies/enemy_template.tscn" id="1_jfqy6"]
[ext_resource type="Script" path="res://Game/Enemies/HeavyFighter/heavy_fighter.gd" id="2_ehyho"]
[ext_resource type="Texture2D" uid="uid://q248k4avuba8" path="res://Assets/Img/Enemies/HeavyFighter.png" id="2_xie3y"]
[ext_resource type="PackedScene" uid="uid://untxh8qat57p" path="res://Game/exhaust.tscn" id="4_m2cn4"]
[ext_resource type="PackedScene" uid="uid://de8mg26twp80" path="res://Game/Weapons/BubbleGun/bubble_gun.tscn" id="5_cmji7"]
[ext_resource type="Texture2D" uid="uid://l43klxnu5lmv" path="res://Assets/Img/Projectiles And Explosions/MuzzleFlash-Sheet.png" id="5_omna3"]

[sub_resource type="Animation" id="Animation_xhhsg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzle/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vodke"]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzle/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8v03a"]
_data = {
"RESET": SubResource("Animation_xhhsg"),
"attack": SubResource("Animation_vodke")
}

[node name="HeavyFighter" instance=ExtResource("1_jfqy6")]
script = ExtResource("2_ehyho")
speed_x = -175
speed_y = 80
hp = 10
credits = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox" index="1"]
polygon = PackedVector2Array(-12, -16, -16, -12, -16, -5, -13, -5, -13, 5, -16, 5, -16, 12, -12, 16, -3, 16, -3, 12, 7, 12, 12, 9, 12, 4, 16, 1, 16, -1, 12, -4, 12, -9, 7, -12, -3, -12, -3, -16)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hitbox" index="0"]
polygon = PackedVector2Array(-12, -16, -16, -12, -16, -5, -13, -5, -13, 5, -16, 5, -16, 12, -12, 16, -3, 16, -3, 12, 7, 12, 12, 9, 12, 4, 16, 1, 16, -1, 12, -4, 12, -9, 7, -12, -3, -12, -3, -16)

[node name="MainSprite" parent="." index="3"]
rotation = 1.5708
texture = ExtResource("2_xie3y")

[node name="Exhaust" parent="." index="4" instance=ExtResource("4_m2cn4")]
position = Vector2(12, 0)
rotation = 3.14159

[node name="AttackTimer" type="Timer" parent="." index="5"]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true
autostart = true

[node name="BubbleGun" parent="." index="6" instance=ExtResource("5_cmji7")]
position = Vector2(-17, 0)
projectile_spray_margin = 3.0

[node name="Muzzle" type="Node2D" parent="." index="7"]
unique_name_in_owner = true
position = Vector2(-18, 0)

[node name="Sprite2D" type="Sprite2D" parent="Muzzle" index="0"]
modulate = Color(1, 1, 1, 0)
rotation = 3.14159
texture = ExtResource("5_omna3")
hframes = 3

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="Muzzle" index="1"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8v03a")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
